# cpp_craft_0314

./: .gitignore  README.md  README.txt
PetrushenkoIrina/: readme.txt
lections/: programme_cpp_craft_0314.txt
lections/1/: cpp_craft_intro.pptx  cpp_craft_lec_1.pptx  cpp_craft_lec_1_hw_help.pptx
lections/2/: cpp_craft_lec_2.pptx
lections/3/: quiz_pre_3.cpp
lections/4/: cpp_craft_lec_4.pptx
lections/5/: cpp_craft_lec_5.pptx
lections/6/: cpp_craft_lec_6.pptx
lections/7/: cpp_craft_lec_7.pptx
lections/7/code_examples/system_utilities_examples/sources/logger_example/: CMakeLists.txt  logger_example.cpp
lections/7/code_examples/system_utilities_examples/sources/sys_proc_example/: CMakeLists.txt  sys_proc_example.cpp
lections/8/: cpp_craft_lec_8.pptx
solutions/Dmitry_Afanasiev/: readme.txt
solutions/IrinaPetrushenko/: readme.txt
solutions/alexei_romanoff/: CMakeLists.txt  readme.txt
solutions/alexey_gromov/: readme.txt
solutions/darya_popova/: readme.txt
solutions/denis_sychou/: readme.txt
solutions/dmitriy_senkovich/: readme.txt
solutions/dmitry_matveev/: readme.txt
solutions/eugene_borodavkin/: readme.txt
solutions/eugenio_novikov/: readme.txt
solutions/eugeniya_tereschenkova/: readme.txt
solutions/gleb_litvinov/: readme.txt
solutions/igor_kolupaev/: readme.txt
solutions/ihar_marozau/: readme.txt
solutions/ilyaivjev/: readme.txt
solutions/jenya_paulovets/: readme.txt
solutions/kurman_vladimir/: readme.txt
solutions/ninjaproger/: readme.txt
solutions/oksana_volchek/3/sources/3_4/: CMakeLists.txt  trades_filter.cpp
solutions/oksana_volchek/3/sources/3_6/: CMakeLists.txt  binary_datafeed.cpp
tasks/: readme.md
(+1170 files in other folders)
